force-app/main/default/objects/smagicinteract__List_View_Configuration__c/smagicinteract__List_View_Configuration__c.object-meta.xml
<CustomObject>
    <label>List View Configuration</label>
    <nameField>
        <label>List View Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>List View Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>