force-app/main/default/objects/smagicinteract__List_View_Configuration__c/fields/smagicinteract__Criteria_Logical_Condition__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Criteria_Logical_Condition__c</fullName>
    <description>Deprecated. Do not use.</description>
    <label>Criteria_Logical_Condition</label>
    <length>40</length>
    <type>Text</type>
</CustomField>