force-app/main/default/objects/smagicinteract__List_View_Configuration__c/fields/smagicinteract__Custom_Logic__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Custom_Logic__c</fullName>
    <description>Deprecated. Do not use.</description>
    <label>Custom Logic</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>