force-app/main/default/objects/smagicinteract__List_View_Configuration__c/fields/smagicinteract__Filter_Criteria__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Filter_Criteria__c</fullName>
    <description>Filter criteria for sms from list view</description>
    <label>Filter Criteria</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>