force-app/main/default/objects/smagicinteract__List_View_Configuration__c/fields/smagicinteract__Filter_Fields__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Filter_Fields__c</fullName>
    <description>Deprecated. Do not use.</description>
    <label>Filter Fields</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>