force-app/main/default/objects/smagicinteract__List_View_Configuration__c/fields/smagicinteract__MMS_Subject__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__MMS_Subject__c</fullName>
    <description>Deprecated. Do not use.</description>
    <label>MMS Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>