force-app/main/default/objects/smagicinteract__List_View_Configuration__c/fields/smagicinteract__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Object_Name__c</fullName>
    <description>Object Name on which sms from list view will operate</description>
    <label>Object Name</label>
    <length>75</length>
    <type>Text</type>
</CustomField>