force-app/main/default/objects/smagicinteract__List_View_Configuration__c/fields/smagicinteract__optOut_Check__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__optOut_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Deprecated. Do not use.</description>
    <label>optOut Check</label>
    <type>Checkbox</type>
</CustomField>