force-app/main/default/objects/smagicinteract__List_View_Configuration__c/fields/smagicinteract__Optout_Field__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Optout_Field__c</fullName>
    <description>Deprecated. Do not use.</description>
    <label>Optout Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>