force-app/main/default/objects/smagicinteract__List_View_Configuration__c/fields/smagicinteract__Phone_Fields__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Phone_Fields__c</fullName>
    <description>Deprecated. Do not use.</description>
    <label>Phone Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>