force-app/main/default/objects/smagicinteract__List_View_Configuration__c/fields/smagicinteract__Template_Body__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Template_Body__c</fullName>
    <description>Deprecated. Do not use.</description>
    <label>Template Body</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>