force-app/main/default/objects/smagicinteract__List_View_Configuration__c/fields/smagicinteract__Template_Id__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Template_Id__c</fullName>
    <description>Deprecated. Do not use.</description>
    <label>Template Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>