force-app/main/default/objects/smagicinteract__List_View_Configuration__c/fields/smagicinteract__Total_Records__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Total_Records__c</fullName>
    <description>Deprecated. Do not use.</description>
    <label>Total Records</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>