force-app/main/default/objects/smagicinteract__List_View_Configuration__c/listViews/smagicinteract__All.listView-meta.xml
<ListView>
    <fullName>smagicinteract__All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>smagicinteract__Template_Body__c</columns>
    <columns>smagicinteract__Template_Id__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>